--- a/app/components/header.html
+++ b/app/components/header.html
@@ -103,11 +103,12 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/investmentBoard.html">投資產品公告</a>
+                    <a class="nav-link" href="javascript:;">投資產品公告</a>
                     <div class="unit unit-right">
                         <div class="unit-content">
                             <ul class="unit-list">
                                 <li class="unit-item"><a class="anchor-link" href="#section-board"><i class="common-icon menu-big icon-sm mgr-1"></i><span>最新消息</span><i class="common-icon menu-top3 icon-lg mgl-1 mgb-1"></i></a></li> 
+                                <li class="unit-item"><a href="/investmentBoard.html"><i class="common-icon menu-big icon-sm mgr-1"></i><span>投資產品公告</span></a></li> 
                                 <li class="unit-item"><a href="https://www.feib.com.tw/fundnotice" target="_blank"><i class="common-icon menu-big icon-sm mgr-1"></i><span>通路報酬揭露查詢</span></a></li> 
                                 <li class="unit-item"><a href="https://www.feib.com.tw/fundfee" target="_blank"><i class="common-icon menu-big icon-sm mgr-1"></i><span>後收型聲明書查詢</span></a></li>
                             </ul>
@@ -128,7 +129,7 @@
                         <li class="menu-item">
                             <div class="menu-title">
                                 <a class="menu-link" href="javascript:;">樂選基金</a>
-                                <i class="fal fa-angle-up menu-toggle"></i>
+                                <i class="fal fa-angle-down menu-toggle"></i>
                             </div>
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
@@ -161,7 +162,7 @@
                         <li class="menu-item">
                             <div class="menu-title">
                                 <a class="menu-link" href="javascript:;">基金點閱排行</a>
-                                <i class="fal fa-angle-up menu-toggle"></i>
+                                <i class="fal fa-angle-down menu-toggle"></i>
                             </div>
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
@@ -184,7 +185,7 @@
                         <li class="menu-item">
                             <div class="menu-title">
                                 <a class="menu-link" href="javascript:;">遠銀投資觀點</a>
-                                <i class="fal fa-angle-up menu-toggle"></i>
+                                <i class="fal fa-angle-down menu-toggle"></i>
                             </div>
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
@@ -207,13 +208,13 @@
                         <li class="menu-item">
                             <div class="menu-title">
                                 <a class="menu-link" href="javascript:;">樂富財經訊息</a>
-                                <i class="fal fa-angle-up menu-toggle"></i>
+                                <i class="fal fa-angle-down menu-toggle"></i>
                             </div>
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
                                     <div class="menu-title">
                                         <a class="menu-link" href="javascript:;">國際金融資訊</a>
-                                        <i class="fal fa-angle-up menu-toggle toggle-md"></i>
+                                        <i class="fal fa-angle-down menu-toggle toggle-md"></i>
                                     </div>
                                     <ul class="menu-expand menu-sm">
                                         <li class="menu-item">
@@ -231,7 +232,7 @@
                                 <li class="menu-item">
                                     <div class="menu-title">
                                         <a class="menu-link" href="javascript:;">基金資訊</a>
-                                        <i class="fal fa-angle-up menu-toggle toggle-md"></i>
+                                        <i class="fal fa-angle-down menu-toggle toggle-md"></i>
                                     </div>
                                     <ul class="menu-expand menu-sm">
                                         <li class="menu-item">
@@ -255,13 +256,18 @@
                         </li>
                         <li class="menu-item">
                             <div class="menu-title">
-                                <a class="menu-link" href="/investmentBoard.html">投資產品公告</a>
-                                <i class="fal fa-angle-up menu-toggle"></i>
+                                <a class="menu-link" href="javascript:;">投資產品公告</a>
+                                <i class="fal fa-angle-down menu-toggle"></i>
                             </div>
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
                                     <div class="menu-title">
                                         <a class="menu-link anchor-link" href="#section-board">最新消息<i class="common-icon menu-top3 icon-lg"></i></a>
+                                    </div>
+                                </li>
+                                <li class="menu-item">
+                                    <div class="menu-title">
+                                        <a class="menu-link" href="/investmentBoard.html">投資產品公告</a>
                                     </div>
                                 </li>
                                 <li class="menu-item">
