--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -37,7 +37,7 @@
     <div class="footer-container">
         <ul class="footer-tools-list">
             <li class="footer-tools-item">
-                <a href="javascript:;" class="footer-tools-link">
+                <a href="https://www.feib.com.tw/tel" target="_blank" class="footer-tools-link">
                     <div class="footer-tools-icon">
                         <i class="common-icon icon-lg contact"></i>
                     </div>
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="footer-tools-item">
-                <a href="javascript:;" class="footer-tools-link">
+                <a href="https://www.feib.com.tw/branch" target="_blank" class="footer-tools-link">
                     <div class="footer-tools-icon">
                         <i class="common-icon icon-lg storeLocator"></i>
                     </div>
@@ -53,7 +53,7 @@
                 </a>
             </li>
             <li class="footer-tools-item">
-                <a href="javascript:;" class="footer-tools-link">
+                <a href="https://www.youtube.com/c/%E9%81%A0%E6%9D%B1%E5%95%86%E9%8A%80%E8%B2%A1%E5%AF%8C%E7%AE%A1%E7%90%86/featured" target="_blank" class="footer-tools-link">
                     <div class="footer-tools-icon">
                         <i class="common-icon icon-lg youtube"></i>
                     </div>
@@ -61,7 +61,7 @@
                 </a>
             </li>
             <li class="footer-tools-item">
-                <a href="javascript:;" class="footer-tools-link">
+                <a href="https://lin.ee/oJkZ5Ot" target="_blank" class="footer-tools-link">
                     <div class="footer-tools-icon">
                         <i class="common-icon icon-lg line"></i>
                     </div>
