--- a/app/components/sidebarModal.html
+++ b/app/components/sidebarModal.html
@@ -7,7 +7,7 @@
             <div class="modal-body">
                 <div>請問您是否為遠東商銀「網路銀行客戶」?</div>
                 <div class="mgt-5">
-                    <a href="https://iapp.feib.com.tw/hppApply/application/index" target="_blank" class="modal-btn gray">否</a>
+                    <a href="https://iapp.feib.com.tw/hppApply/home/index" target="_blank" class="modal-btn gray">否</a>
                     <a href="https://www.feib.com.tw/" target="_blank" class="modal-btn red">是</a>
                 </div>
             </div>
