--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -87,6 +87,10 @@ button, input, select {
     -moz-appearance: none;
      -webkit-appearance: none;
      appearance: none;
+     &:focus{
+         border: 0;
+         outline: none;
+     }
 }
 
 select::-ms-expand {
