--- a/app/components/meta.html
+++ b/app/components/meta.html
@@ -31,6 +31,10 @@
 <script src="./scripts/header.js"></script>
 <!-- endbuild -->
 
+<!-- build:js ./scripts/sidebar.js -->
+<script src="./scripts/sidebar.js"></script>
+<!-- endbuild -->
+
 <!-- build:js ./scripts/footer.js -->
 <script src="./scripts/footer.js"></script>
 <!-- endbuild -->
