--- a/app/components/sidebar.html
+++ b/app/components/sidebar.html
@@ -1,26 +1,29 @@
-<ul class="sidebar-list">
-    <li class="sidebar-item">
-        <a href="javascript:;" class="sidebar-link" data-toggle="modal" data-target="#exampleModal">
-            <div class="sidebar-icon"><i class="common-icon sidebar-order"></i></div>
-            <div>立即下單</div>
-        </a>
-    </li>
-    <li class="sidebar-item">
-        <a href="javascript:;" class="sidebar-link">
-            <div class="sidebar-icon"><i class="common-icon sidebar-dividend"></i></div>
-            <div>配息查詢</div>
-        </a>
-    </li>
-    <li class="sidebar-item">
-        <a href="javascript:;" class="sidebar-link">
-            <div class="sidebar-icon"><i class="common-icon sidebar-value"></i></div>
-            <div>淨值查詢</div>
-        </a>
-    </li>
-    <li class="sidebar-item">
-        <a href="https://iapp.feib.com.tw/hppApply/application/index" target="_blank" class="sidebar-link">
-            <div class="sidebar-icon"><i class="common-icon sidebar-account"></i></div>
-            <div>立即開戶</div>
-        </a>
-    </li>
-</ul>
+<div class="sidebar">
+    <div class="sidebar-toggle"></div>
+    <ul class="sidebar-list">
+        <li class="sidebar-item">
+            <a href="javascript:;" class="sidebar-link" data-toggle="modal" data-target="#exampleModal">
+                <div class="sidebar-icon"><i class="common-icon sidebar-order"></i></div>
+                <div>立即下單</div>
+            </a>
+        </li>
+        <li class="sidebar-item">
+            <a href="javascript:;" class="sidebar-link">
+                <div class="sidebar-icon"><i class="common-icon sidebar-dividend"></i></div>
+                <div>配息查詢</div>
+            </a>
+        </li>
+        <li class="sidebar-item">
+            <a href="javascript:;" class="sidebar-link">
+                <div class="sidebar-icon"><i class="common-icon sidebar-value"></i></div>
+                <div>淨值查詢</div>
+            </a>
+        </li>
+        <li class="sidebar-item">
+            <a href="https://iapp.feib.com.tw/hppApply/application/index" target="_blank" class="sidebar-link">
+                <div class="sidebar-icon"><i class="common-icon sidebar-account"></i></div>
+                <div>立即開戶</div>
+            </a>
+        </li>
+    </ul>
+</div>
