--- a/app/components/header.html
+++ b/app/components/header.html
@@ -22,7 +22,7 @@
                             <img src="./images/logo/logo.svg" alt="logo" />
                         </div>
                     </a>
-                    <a href="/" class="info">投資理財網</a>
+                    <a href="./index.html" class="info">投資理財網</a>
                 </div>
                 <a href="https://ebank.feib.com.tw/netbank/html/pages/jsp/Accessible/Login/login.jsp" target="_blank" class="user-box fal fa-user fa-lg"></a>
             </div>
@@ -68,8 +68,7 @@
                         <div class="unit-content">
                             <ul class="unit-list">
                                 <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-movie icon-sm mgr-1"></i><span>遠銀市場觀點</span></a></li> 
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>投研財經展望</span></a></li> 
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>市場話題時事</span></a></li>
+                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>投研財經展望</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -82,8 +81,8 @@
                                 <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>國際金融資訊</span></a></li>
                                 <div class="unit-box">
                                     <ul class="unit-box-list">
-                                        <li class="unit-box-item"><a href="/internationalNews.html"><i class="common-icon menu-sm"></i>國際財經新聞</a></li>
-                                        <li class="unit-box-item"><a href="/internationalEconomic.html"><i class="common-icon menu-sm"></i>各國經濟情勢</a></li>
+                                        <li class="unit-box-item"><a href="./internationalNews.html"><i class="common-icon menu-sm"></i>國際財經新聞</a></li>
+                                        <li class="unit-box-item"><a href="./internationalEconomic.html"><i class="common-icon menu-sm"></i>各國經濟情勢</a></li>
                                     </ul>
                                 </div>
                             </ul>
@@ -108,7 +107,7 @@
                         <div class="unit-content">
                             <ul class="unit-list">
                                 <li class="unit-item"><a class="anchor-link" href="#section-board"><i class="common-icon menu-big icon-sm mgr-1"></i><span>最新消息</span><i class="common-icon menu-top3 icon-lg mgl-1 mgb-1"></i></a></li> 
-                                <li class="unit-item"><a href="/investmentBoard.html"><i class="common-icon menu-big icon-sm mgr-1"></i><span>投資產品公告</span></a></li> 
+                                <li class="unit-item"><a href="./investmentBoard.html"><i class="common-icon menu-big icon-sm mgr-1"></i><span>投資產品公告</span></a></li> 
                                 <li class="unit-item"><a href="https://www.feib.com.tw/fundnotice" target="_blank"><i class="common-icon menu-big icon-sm mgr-1"></i><span>通路報酬揭露查詢</span></a></li> 
                                 <li class="unit-item"><a href="https://www.feib.com.tw/fundfee" target="_blank"><i class="common-icon menu-big icon-sm mgr-1"></i><span>後收型聲明書查詢</span></a></li>
                             </ul>
@@ -198,11 +197,6 @@
                                         <a class="menu-link" href="javascript:;">投研財經展望</a>
                                     </div>
                                 </li>
-                                <li class="menu-item">
-                                    <div class="menu-title">
-                                        <a class="menu-link" href="javascript:;">市場話題時事</a>
-                                    </div>
-                                </li>
                             </ul>
                         </li>
                         <li class="menu-item">
@@ -219,12 +213,12 @@
                                     <ul class="menu-expand menu-sm">
                                         <li class="menu-item">
                                             <div class="menu-title">
-                                                <a class="menu-link" href="/internationalNews.html">國際財經新聞</a>
+                                                <a class="menu-link" href="./internationalNews.html">國際財經新聞</a>
                                             </div>
                                         </li>
                                         <li class="menu-item">
                                             <div class="menu-title">
-                                                <a class="menu-link" href="/internationalEconomic.html">各國經濟情勢</a>
+                                                <a class="menu-link" href="./internationalEconomic.html">各國經濟情勢</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -267,7 +261,7 @@
                                 </li>
                                 <li class="menu-item">
                                     <div class="menu-title">
-                                        <a class="menu-link" href="/investmentBoard.html">投資產品公告</a>
+                                        <a class="menu-link" href="./investmentBoard.html">投資產品公告</a>
                                     </div>
                                 </li>
                                 <li class="menu-item">
