--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -95,9 +95,10 @@ footer{
             margin: 0 auto;
             margin-bottom: 15px;
             @media screen and (max-width: 575px){
-                padding: 0 10px;
+                padding: 0;
             }
             li.footer-tools-item{
+                flex: 1;
                 a.footer-tools-link{
                     display: block;
                     text-align: center;
