--- a/app/styles/_inside.scss
+++ b/app/styles/_inside.scss
@@ -1,5 +1,5 @@
 .inside-page{
-    ul.sidebar-list{
+    .sidebar{
         @media screen and (max-width: 767px) {
             display: none;
         }
