--- a/app/components/header.html
+++ b/app/components/header.html
@@ -55,9 +55,9 @@
                     <div class="unit unit-left">
                         <div class="unit-content">
                             <ul class="unit-list">
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>優質特選基金</span><i class="common-icon menu-top10 icon-lg mgl-1 mgb-1"></i></a></li> 
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>核心配置首選</span><i class="common-icon menu-top10 icon-lg mgl-1 mgb-1"></i></a></li> 
-                                <li class="unit-item"><a href="javascript:;"><i class="common-icon menu-big icon-sm mgr-1"></i><span>本行熱銷排行</span><i class="common-icon menu-top10 icon-lg mgl-1 mgb-1"></i></a></li>
+                                <li class="unit-item"><a class="section-ranking-link anchor-link" data-href=".section-ranking" data-tabs=".section-ranking-fund" href="##href-fund"><i class="common-icon menu-big icon-sm mgr-1"></i><span>優質特選基金</span><i class="common-icon menu-top10 icon-lg mgl-1 mgb-1"></i></a></li> 
+                                <li class="unit-item"><a class="section-ranking-link anchor-link" data-href=".section-ranking" data-tabs=".section-ranking-config" href="##href-config"><i class="common-icon menu-big icon-sm mgr-1"></i><span>核心配置首選</span><i class="common-icon menu-top10 icon-lg mgl-1 mgb-1"></i></a></li> 
+                                <li class="unit-item"><a class="section-ranking-link anchor-link" data-href=".section-ranking" data-tabs=".section-ranking-best" href="##href-best"><i class="common-icon menu-big icon-sm mgr-1"></i><span>本行熱銷排行</span><i class="common-icon menu-top10 icon-lg mgl-1 mgb-1"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                     <div class="unit unit-right">
                         <div class="unit-content">
                             <ul class="unit-list">
-                                <li class="unit-item"><a class="anchor-link" href="#section-board"><i class="common-icon menu-big icon-sm mgr-1"></i><span>最新消息</span><i class="common-icon menu-top3 icon-lg mgl-1 mgb-1"></i></a></li> 
+                                <li class="unit-item"><a class="anchor-link" data-href=".section-board" href="##href-news"><i class="common-icon menu-big icon-sm mgr-1"></i><span>最新消息</span><i class="common-icon menu-top3 icon-lg mgl-1 mgb-1"></i></a></li> 
                                 <li class="unit-item"><a href="./investmentBoard.html"><i class="common-icon menu-big icon-sm mgr-1"></i><span>投資產品公告</span></a></li> 
                                 <li class="unit-item"><a href="https://www.feib.com.tw/fundnotice" target="_blank"><i class="common-icon menu-big icon-sm mgr-1"></i><span>通路報酬揭露查詢</span></a></li> 
                                 <li class="unit-item"><a href="https://www.feib.com.tw/fundfee" target="_blank"><i class="common-icon menu-big icon-sm mgr-1"></i><span>後收型聲明書查詢</span></a></li>
@@ -166,17 +166,17 @@
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
                                     <div class="menu-title">
-                                        <a class="menu-link" href="javascript:;">優質特選基金<i class="common-icon menu-top10 icon-lg"></i></a>
+                                        <a class="menu-link anchor-link section-ranking-link" data-href=".section-ranking" data-tabs=".section-ranking-fund" href="##href-fund">優質特選基金<i class="common-icon menu-top10 icon-lg"></i></a>
                                     </div>
                                 </li>
                                 <li class="menu-item">
                                     <div class="menu-title">
-                                        <a class="menu-link" href="javascript:;">核心配置首選<i class="common-icon menu-top10 icon-lg"></i></a>
+                                        <a class="menu-link anchor-link section-ranking-link" data-href=".section-ranking" data-tabs=".section-ranking-config" href="##href-config">核心配置首選<i class="common-icon menu-top10 icon-lg"></i></a>
                                     </div>
                                 </li>
                                 <li class="menu-item">
                                     <div class="menu-title">
-                                        <a class="menu-link" href="javascript:;">本行熱銷排行<i class="common-icon menu-top10 icon-lg"></i></a>
+                                        <a class="menu-link anchor-link section-ranking-link" data-href=".section-ranking" data-tabs=".section-ranking-best" href="##href-best">本行熱銷排行<i class="common-icon menu-top10 icon-lg"></i></a>
                                     </div>
                                 </li>
                             </ul>
@@ -256,7 +256,7 @@
                             <ul class="menu-expand menu-md">
                                 <li class="menu-item">
                                     <div class="menu-title">
-                                        <a class="menu-link anchor-link" href="#section-board">最新消息<i class="common-icon menu-top3 icon-lg"></i></a>
+                                        <a class="menu-link anchor-link" data-href=".section-board" href="##href-news">最新消息<i class="common-icon menu-top3 icon-lg"></i></a>
                                     </div>
                                 </li>
                                 <li class="menu-item">
