--- a/app/components/meta.html
+++ b/app/components/meta.html
@@ -6,7 +6,7 @@
 <meta name="keyword" contnet="##keyword" />
 
 <title>##title</title>
-<link rel="shortcut icon" href="../favicon.png" />
+<link rel="shortcut icon" href="./favicon.png" />
 
 <!-- fb 分享設定 -->
 <meta property="og:title" content="##title" />
